# taipy_tools

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
src/: main.py
src/algorithms/: qr_code_functions.py  uuid_functions.py  video_to_gif_functions.py  video_to_gif_get_duration.py  video_to_gif_state_functions.py
src/css/: main.css
src/pages/: __init__.py  qr_codes.py  root.py  uuid_generator.py  video_to_gif.py
src/taipy_utilities/: __init__.py  taipy_callback.py
tests/: test_get_uuid.py  test_qr_codes.py  test_video_to_gif.py
